[package]
name = "irq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
axum = "0.7.2"
rocket = "0.5.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["full"] }
serde = "1.0.193"
rand = "0.8.5"
open = "5.0.1"

[[bin]]
name = "line-halfplane-demo"
path = "src/bin/line-halfplane-demo.rs"

[[bin]]
name = "runtime"
path = "src/bin/runtime.rs"